probefiles.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: mydeployment
spec:
   replicas: 3
   selector:
      matchLabels:
        app: web
   template:
       metadata:
         labels:
            app: web
       spec:
        containers:
          - name: nginxcontainer
            image: nginx
            ports:
              - containerPort: 80   
            livenessProbe:
                httpGet:
                  path: /index.html
                  port: 80
                periodSeconds: 5
                failureThreshold: 2
                initialDelaySeconds: 5
            readinessProbe:
                httpGet:
                  path: /index.html
                  port: 80
                periodSeconds: 5
                failureThreshold: 
            startupProbe:
                exec:
                  command:
                     - cat
                     - /usr/share/nginx/html/index.html
                periodSeconds: 5
                failureThreshold: 24
                initialDelaySeconds: 5
