myservice.yml
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
   selector:
      app: web
   ports:
    - protocol: TCP
      port: 80
      targetPort: 80
   type: NodePort
