ingresswala.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: myingress
spec:
  rules:
    - host: "tujanena.com"
      http:
       paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginxservice
              port:
                number: 80
